# node

./: .dockerignore  .gitignore  Cargo.toml  LLM.md  PUBLISHING.md  README.md  publish-zoo-crates.sh
.github/: binary.Dockerfile  build.yml  run-main-primitives-cargo-tests.sh
cloud-node/: Dockerfile  README.md  env.conf  run_node.sh  zoo-node.service
docker-build/: .gitignore  Dockerfile-RELEASE  Dockerfile-RELEASE.dockerignore  README.md  docker-compose.yml  partner_prepare.sh
docs/: filesystem_changes.md  testing.md
files/: Zoo_welcome.md  echo_definition.json  parsed_channels.md
perf_scripts/: create_jobs.sh
scripts/: run_agent_provider.sh  run_all_localhost.sh  (+3 more)
zoo-bin/zoo-node/: Cargo.toml  build.rs
zoo-bin/zoo-node/examples/: generate_openapi_docs.rs
zoo-bin/zoo-node/src/: main.rs  runner.rs
zoo-bin/zoo-node/src/cron_tasks/: cron_manager.rs
zoo-bin/zoo-node/src/llm_provider/: error.rs  job_callback_manager.rs  job_manager.rs  llm_provider.rs  llm_provider_to_serialization.rs  parsing_helper.rs
zoo-bin/zoo-node/src/llm_provider/execution/: job_execution_core.rs  job_execution_helpers.rs  job_scope_helpers.rs  job_vector_search.rs  user_message_parser.rs
zoo-bin/zoo-node/src/llm_provider/execution/chains/: inference_chain_router.rs  inference_chain_trait.rs
zoo-bin/zoo-node/src/llm_provider/execution/chains/generic_chain/: generic_inference_chain.rs  generic_prompts.rs
zoo-bin/zoo-node/src/llm_provider/execution/prompts/: general_prompts.rs  prompt_test.rs
zoo-bin/zoo-node/src/llm_provider/providers/: claude.rs  deepseek.rs  exo.rs  gemini.rs  grok.rs  groq.rs  local_regex.rs  mod.rs  ollama.rs  openai.rs  openai_tests.rs  openrouter.rs  togetherai.rs  zoo_backend.rs
zoo-bin/zoo-node/src/llm_provider/providers/shared/: claude_api.rs  deepseek_api.rs  gemini_api.rs  groq_api.rs  ollama_api.rs  openai_api.rs  openai_api_deprecated.rs  shared_model_logic.rs
zoo-bin/zoo-node/src/managers/: galxe_quests.rs  identity_manager.rs  identity_network_manager.rs  model_capabilities_manager.rs  model_capabilities_manager_tests.rs  token_counter_tests.rs  tool_router.rs
zoo-bin/zoo-node/src/network/: README_LIBP2P.md  handle_commands_list.rs  libp2p_manager.rs  mcp_manager.rs  network_manager_utils.rs  node.rs  node_error.rs  node_shareable_logic.rs  ws_manager.rs  ws_routes.rs
zoo-bin/zoo-node/src/network/agent_payments_manager/: external_agent_offerings_manager.rs  my_agent_offerings_manager.rs
zoo-bin/zoo-node/src/network/network_manager/: libp2p_message_handler.rs  network_handlers.rs
zoo-bin/zoo-node/src/network/v1_api/: api_v1_commands.rs  api_v1_internal_commands.rs  api_v1_local_commands.rs  api_v1_vecfs_commands.rs
zoo-bin/zoo-node/src/network/v2_api/: api_v2_commands.rs  api_v2_commands_cron.rs  api_v2_commands_ext_agent_offers.rs  api_v2_commands_jobs.rs  api_v2_commands_my_agent_offers.rs  api_v2_commands_ngrok.rs  api_v2_commands_ngrok_disabled.rs  api_v2_commands_oauth.rs  api_v2_commands_prompts.rs  api_v2_commands_tools.rs  api_v2_commands_vecfs.rs  api_v2_commands_wallets.rs
zoo-bin/zoo-node/src/network/zip_export_import/: zip_export_import.rs
zoo-bin/zoo-node/src/tools/: agent_execution.rs  tool_generation.rs  tool_prompts.rs
zoo-bin/zoo-node/src/tools/llm_language_support/: file_support_py.rs  file_support_ts.rs  generate_python.rs  generate_typescript.rs
zoo-bin/zoo-node/src/tools/tool_definitions/: definition_generation.rs
zoo-bin/zoo-node/src/tools/tool_execution/: execute_agent_dynamic.rs  execute_mcp_server_dynamic.rs  execution_coordinator.rs  execution_custom.rs  execution_deno_dynamic.rs  execution_header_generator.rs  execution_python_dynamic.rs
zoo-bin/zoo-node/src/tools/tool_implementation/: tool_traits.rs
zoo-bin/zoo-node/src/tools/tool_implementation/native_tools/: agent_processor.rs  config_setup.rs  llm_map_reduce_processor.rs  llm_prompt_processor.rs  mod.rs  sql_processor.rs  tool_knowledge.rs  typescript_unsafe_processor.rs
zoo-bin/zoo-node/src/utils/: args.rs  cli.rs  environment.rs  keys.rs  logging_helpers.rs  printer.rs
zoo-bin/zoo-node/src/wallet/: .!96414!x402_docs.txt  coinbase_mpc_wallet.rs  local_ether_wallet.rs  wallet_manager.rs  wallet_traits.rs
zoo-bin/zoo-node/tests/: HOW_TO.md
zoo-bin/zoo-node/tests/it/: a3_micropayment_flow_tests.rs  a4_micropayment_localhost_tests.rs  change_nodes_name_tests.rs  cron_job_tests.rs  db_identity_tests.rs  db_inbox_tests.rs  db_job_tests.rs  db_llm_providers_tests.rs  db_restore_tests.rs  echo_tool_router_key_test.rs  job_branchs_retries_tests.rs  job_code_duplicate.rs  job_code_fork_tests.rs  job_concurrency_in_seq_tests.rs  job_fork_messages_tests.rs  job_image_analysis_tests.rs  job_manager_concurrency_tests.rs  job_tree_usage_tests.rs  model_capabilities_manager_tests.rs  native_tool_tests.rs  node_integration_tests.rs  node_retrying_tests.rs  node_simple_ux_tests.rs  performance_tests.rs  planner_integration_tests.rs  simple_job_example_tests.rs  tool_config_override_test.rs  websocket_tests.rs
zoo-bin/zoo-node/tests/it/utils/: db_handlers.rs  node_test_api.rs  node_test_local.rs  test_boilerplate.rs  vecfs_test_utils.rs
zoo-libs/zoo-job-queue-manager/: Cargo.toml
zoo-libs/zoo-job-queue-manager/src/: job_queue_manager.rs
zoo-libs/zoo-non-rust-code/: Cargo.toml
zoo-libs/zoo-non-rust-code/src/: lib.rs  test_utils.rs
zoo-libs/zoo-non-rust-code/src/functions/: getIdentityDataImpl.test.ts  get_identity_data.rs  parse_pdf.rs  parse_xlsx.rs
zoo-libs/zoo-non-rust-code/src/functions/x402/: create_payment.rs  paymentRequirementsDenoImpl.ts  payment_requirements.rs  settle_payment.rs  verifyPaymentDenoImpl.ts  verify_payment.rs
zoo-libs/zoo-tools-primitives/: Cargo.toml
zoo-libs/zoo-tools-primitives/src/tools/: deno_tools.rs  error.rs  mcp_server_tool.rs  mod.rs  network_tool.rs  python_tools.rs  rust_tools.rs  shared_execution.rs  tool_config.rs  tool_playground.rs  zoo_tool.rs
zoo-libs/zoo-tools-primitives/src/tools/tool_router_dep/: workflows_data.rs
zoo-test-framework/: Cargo.toml
zoo-test-framework/src/: context.rs
(+170 files in other folders)
