[package]
name = "zoo_test_framework"
version = "0.1.0"
edition = "2021"


[lib]
name = "zoo_test_framework"

[dependencies]
tokio = { workspace = true }
async-channel = { workspace = true }
anyhow = { workspace = true }
zoo_http_api = { workspace = true }
zoo_message_primitives = { workspace = true }
zoo_embedding = { workspace = true }
zoo_sqlite = { workspace = true }
zoo_node = { path = "../zoo-bin/zoo-node" }
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
tempfile = { workspace = true }
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
