[package]
name = "zoo_job_queue_manager"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
zoo_message_primitives = { workspace = true }
zoo_sqlite = { workspace = true }
zoo_embedding = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde_json = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dev-dependencies]
# zoo_vector_resources = { workspace = true }
tempfile = { workspace = true }
