[package]
name = "zoo_non_rust_code"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
zoo_tools_runner = { workspace = true }
tempfile = { workspace = true }
zoo_message_primitives = { workspace = true }
log = { workspace = true }