[package]
name = "zoo_tools_primitives"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }

[dependencies]
serde_json = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
zoo_message_primitives = { workspace = true }
# zoo_vector_resources = { workspace = true }
reqwest = { workspace = true, features = ["json", "tokio-native-tls"] }
zoo_tools_runner = { workspace = true, features = ["built-in-tools"] }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-sse-client"] }
log = { workspace = true }
once_cell = "1.19"
zoo_mcp = { workspace = true }
